backend /grammars/.antlr/LanguageParser.java
// Generated from /home/miguel/Descargas/Compi2/Laboratorio/Proyecto1/backend /grammars/Language.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, ID=62, INT=63, FLOAT=64, STRING=65, RUNE=66, WS=67, 
		LINEALCOMENT=68, BlockComment=69;
	public static final int
		RULE_program = 0, RULE_declaraciones = 1, RULE_declararvar = 2, RULE_datos = 3, 
		RULE_filasMatriz = 4, RULE_filaMatriz = 5, RULE_instStruct = 6, RULE_listaAtributos = 7, 
		RULE_funcDcl = 8, RULE_params = 9, RULE_stmt = 10, RULE_forInit = 11, 
		RULE_instCase = 12, RULE_instDefault = 13, RULE_asignacion = 14, RULE_expr = 15, 
		RULE_llamada = 16, RULE_args = 17, RULE_booll = 18, RULE_tipos = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declaraciones", "declararvar", "datos", "filasMatriz", "filaMatriz", 
			"instStruct", "listaAtributos", "funcDcl", "params", "stmt", "forInit", 
			"instCase", "instDefault", "asignacion", "expr", "llamada", "args", "booll", 
			"tipos"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "'='", "';'", "':='", "'['", "']'", "'{'", "','", "'}'", 
			"':'", "'type'", "'struct'", "'func'", "'('", "')'", "'fmt'", "'.'", 
			"'Println'", "'if'", "'else'", "'switch'", "'for'", "'range'", "'break'", 
			"'continue'", "'return'", "'case'", "'default'", "'+='", "'-='", "'++'", 
			"'--'", "'strconv.Atoi'", "'strconv.ParseFloat'", "'reflect.TypeOf'", 
			"'slices.Index'", "'strings.Join'", "'len'", "'append'", "'-'", "'!'", 
			"'*'", "'/'", "'%'", "'+'", "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", 
			"'&&'", "'||'", "'nil'", "'true'", "'false'", "'int'", "'float64'", "'bool'", 
			"'string'", "'rune'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "ID", "INT", "FLOAT", "STRING", "RUNE", "WS", "LINEALCOMENT", 
			"BlockComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Language.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<DeclaracionesContext> declaraciones() {
			return getRuleContexts(DeclaracionesContext.class);
		}
		public DeclaracionesContext declaraciones(int i) {
			return getRuleContext(DeclaracionesContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4485580839280088958L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) {
				{
				{
				setState(40);
				declaraciones();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionesContext extends ParserRuleContext {
		public DeclararvarContext declararvar() {
			return getRuleContext(DeclararvarContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public FuncDclContext funcDcl() {
			return getRuleContext(FuncDclContext.class,0);
		}
		public InstStructContext instStruct() {
			return getRuleContext(InstStructContext.class,0);
		}
		public DeclaracionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaraciones; }
	}

	public final DeclaracionesContext declaraciones() throws RecognitionException {
		DeclaracionesContext _localctx = new DeclaracionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaraciones);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				declararvar();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				funcDcl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(49);
				instStruct();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclararvarContext extends ParserRuleContext {
		public DeclararvarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declararvar; }
	 
		public DeclararvarContext() { }
		public void copyFrom(DeclararvarContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SliceInicialiContext extends DeclararvarContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public SliceInicialiContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SliceNoIncialContext extends DeclararvarContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public SliceNoIncialContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class StructParamContext extends DeclararvarContext {
		public List<TerminalNode> ID() { return getTokens(LanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LanguageParser.ID, i);
		}
		public List<DatosContext> datos() {
			return getRuleContexts(DatosContext.class);
		}
		public DatosContext datos(int i) {
			return getRuleContext(DatosContext.class,i);
		}
		public StructParamContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrimeraDeclContext extends DeclararvarContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PrimeraDeclContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReasignarSliceContext extends DeclararvarContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ReasignarSliceContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SegundaDeclContext extends DeclararvarContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public SegundaDeclContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MatrisContext extends DeclararvarContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public FilasMatrizContext filasMatriz() {
			return getRuleContext(FilasMatrizContext.class,0);
		}
		public MatrisContext(DeclararvarContext ctx) { copyFrom(ctx); }
	}

	public final DeclararvarContext declararvar() throws RecognitionException {
		DeclararvarContext _localctx = new DeclararvarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declararvar);
		int _la;
		try {
			setState(132);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new PrimeraDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				match(T__0);
				setState(53);
				match(ID);
				setState(54);
				tipos();
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(55);
					match(T__1);
					setState(56);
					expr(0);
					}
				}

				setState(59);
				match(T__2);
				}
				break;
			case 2:
				_localctx = new SegundaDeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				match(ID);
				setState(62);
				match(T__3);
				setState(63);
				expr(0);
				setState(64);
				match(T__2);
				}
				break;
			case 3:
				_localctx = new SliceInicialiContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(ID);
				setState(67);
				match(T__3);
				setState(68);
				match(T__4);
				setState(69);
				match(T__5);
				setState(70);
				tipos();
				setState(71);
				match(T__6);
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 14)) & ~0x3f) == 0 && ((1L << (_la - 14)) & 8733421127335937L) != 0)) {
					{
					{
					setState(72);
					expr(0);
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__7) {
						{
						setState(73);
						match(T__7);
						}
					}

					}
					}
					setState(80);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				match(T__8);
				setState(82);
				match(T__2);
				}
				break;
			case 4:
				_localctx = new SliceNoIncialContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				match(T__0);
				setState(85);
				match(ID);
				setState(86);
				match(T__4);
				setState(87);
				match(T__5);
				setState(88);
				tipos();
				setState(89);
				match(T__2);
				}
				break;
			case 5:
				_localctx = new MatrisContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(91);
				match(ID);
				setState(92);
				match(T__3);
				setState(93);
				match(T__4);
				setState(94);
				match(T__5);
				setState(95);
				match(T__4);
				setState(96);
				match(T__5);
				setState(97);
				tipos();
				setState(98);
				match(T__6);
				setState(99);
				filasMatriz();
				setState(100);
				match(T__8);
				setState(101);
				match(T__2);
				}
				break;
			case 6:
				_localctx = new StructParamContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(103);
				match(ID);
				setState(104);
				match(T__3);
				setState(105);
				match(ID);
				setState(106);
				match(T__6);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ID) {
					{
					{
					setState(107);
					datos();
					}
					}
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(113);
				match(T__8);
				}
				break;
			case 7:
				_localctx = new ReasignarSliceContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(114);
				match(ID);
				setState(115);
				match(T__1);
				setState(116);
				match(T__4);
				setState(117);
				match(T__5);
				setState(118);
				tipos();
				setState(119);
				match(T__6);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (((((_la - 14)) & ~0x3f) == 0 && ((1L << (_la - 14)) & 8733421127335937L) != 0)) {
					{
					{
					setState(120);
					expr(0);
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__7) {
						{
						setState(121);
						match(T__7);
						}
					}

					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				match(T__8);
				setState(130);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DatosContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LanguageParser.ID, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public DatosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datos; }
	}

	public final DatosContext datos() throws RecognitionException {
		DatosContext _localctx = new DatosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_datos);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ID);
			setState(135);
			match(T__9);
			setState(136);
			expr(0);
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(137);
				match(T__7);
				setState(141);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(138);
					match(ID);
					setState(139);
					match(T__9);
					setState(140);
					expr(0);
					}
					break;
				}
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FilasMatrizContext extends ParserRuleContext {
		public List<FilaMatrizContext> filaMatriz() {
			return getRuleContexts(FilaMatrizContext.class);
		}
		public FilaMatrizContext filaMatriz(int i) {
			return getRuleContext(FilaMatrizContext.class,i);
		}
		public FilasMatrizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filasMatriz; }
	}

	public final FilasMatrizContext filasMatriz() throws RecognitionException {
		FilasMatrizContext _localctx = new FilasMatrizContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_filasMatriz);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			filaMatriz();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(149);
				match(T__7);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(150);
					filaMatriz();
					}
				}

				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FilaMatrizContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public FilaMatrizContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filaMatriz; }
	}

	public final FilaMatrizContext filaMatriz() throws RecognitionException {
		FilaMatrizContext _localctx = new FilaMatrizContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_filaMatriz);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__6);
			setState(159);
			expr(0);
			setState(164);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(160);
				match(T__7);
				setState(161);
				expr(0);
				}
				}
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstStructContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public List<ListaAtributosContext> listaAtributos() {
			return getRuleContexts(ListaAtributosContext.class);
		}
		public ListaAtributosContext listaAtributos(int i) {
			return getRuleContext(ListaAtributosContext.class,i);
		}
		public InstStructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instStruct; }
	}

	public final InstStructContext instStruct() throws RecognitionException {
		InstStructContext _localctx = new InstStructContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instStruct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(T__10);
			setState(170);
			match(ID);
			setState(171);
			match(T__11);
			setState(172);
			match(T__6);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(173);
				listaAtributos();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(179);
			match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaAtributosContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(LanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LanguageParser.ID, i);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public ListaAtributosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaAtributos; }
	}

	public final ListaAtributosContext listaAtributos() throws RecognitionException {
		ListaAtributosContext _localctx = new ListaAtributosContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaAtributos);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(ID);
			setState(184);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__56:
			case T__57:
			case T__58:
			case T__59:
			case T__60:
				{
				setState(182);
				tipos();
				}
				break;
			case ID:
				{
				setState(183);
				match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(186);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDclContext extends ParserRuleContext {
		public FuncDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDcl; }
	 
		public FuncDclContext() { }
		public void copyFrom(FuncDclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncStructContext extends FuncDclContext {
		public List<TerminalNode> ID() { return getTokens(LanguageParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(LanguageParser.ID, i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public List<DeclaracionesContext> declaraciones() {
			return getRuleContexts(DeclaracionesContext.class);
		}
		public DeclaracionesContext declaraciones(int i) {
			return getRuleContext(DeclaracionesContext.class,i);
		}
		public FuncStructContext(FuncDclContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncDcl1Context extends FuncDclContext {
		public TerminalNode ID() { return getToken(LanguageParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public List<DeclaracionesContext> declaraciones() {
			return getRuleContexts(DeclaracionesContext.class);
		}
		public DeclaracionesContext declaraciones(int i) {
			return getRuleContext(DeclaracionesContext.class,i);
		}
		public FuncDcl1Context(FuncDclContext ctx) { copyFrom(ctx); }
	}

	public final FuncDclContext funcDcl() throws RecognitionException {
		FuncDclContext _localctx = new FuncDclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcDcl);
		int _la;
		try {
			setState(228);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,22,_ctx) ) {
			case 1:
				_localctx = new FuncDcl1Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(188);
				match(T__12);
				setState(189);
				match(ID);
				setState(190);
				match(T__13);
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(191);
					params();
					}
				}

				setState(194);
				match(T__14);
				setState(196);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4467570830351532032L) != 0)) {
					{
					setState(195);
					tipos();
					}
				}

				setState(198);
				match(T__6);
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4485580839280088958L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) {
					{
					{
					setState(199);
					declaraciones();
					}
					}
					setState(204);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(205);
				match(T__8);
				}
				break;
			case 2:
				_localctx = new FuncStructContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(206);
				match(T__12);
				setState(207);
				match(T__13);
				setState(208);
				match(ID);
				setState(209);
				match(ID);
				setState(210);
				match(T__14);
				setState(211);
				match(ID);
				setState(212);
				match(T__13);
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(213);
					params();
					}
				}

				setState(216);
				match(T__14);
				setState(218);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4467570830351532032L) != 0)) {
					{
					setState(217);
					tipos();
					}
				}

				setState(220);
				match(T__6);
				setState(224);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -4485580839280088958L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 7L) != 0)) {
					{
					{
					setState(221);
					declaraciones();
					}
					}
					setState(226);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(227);
				match(T__8);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
